[workspace]
resolver = "2"
members = [
  "dna/zomes/path_explorer",
  "dna/zomes/authorship_integrity",
  "dna/zomes/authorship_coordinator",
  "dna/zomes/authorship_zapi",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles",
  "dna/zomes/threads_integrity",
  "dna/zomes/threads",
  ]

[workspace.package]
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.203", default-features = false }
hdi = { version = "=0.5.0-dev.12", default-features = false }
hdk = { version = "=0.4.0-dev.14", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0-dev20" }
zome_signals = { git = "https://github.com/ddd-mtl/zome-signals", branch = "hdk-4.0-dev.20" }
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-4.0-dev.20" }
path_explorer_types = { git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer_types", branch = "hdk-4.0-dev.20" }
path_explorer = { git = "https://github.com/lightningrodlabs/path-explorer", package = "path_explorer", branch = "hdk-4.0-dev.20" }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
#lto = true
lto = false
