[package]
name = "sweettest_threads"
version.workspace = true
edition.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
serde = { version = "1.0", default-features = false }
tokio = { version = "1.13", features = [ "full" ] }
tokio-stream = { version = "0.1", default-features = false }
maplit = { version = "1", default-features = false }

holochain = { version = "=0.1.4"}
holo_hash = { version = "=0.1.2", default-features = false }
sweettest_utils = { git = "https://github.com/ddd-mtl/sweettest-utils", branch = "hc-0.1.4" }

threads = { path = "../dna/zomes/threads", default-features = false }
threads_integrity = { path = "../dna/zomes/threads_integrity", default-features = false }
