[package]
name = "path_explorer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
hdk.workspace = true

path_utils = { path = "../../../crates/path_utils" }
time_indexing = { path = "../../../crates/time_indexing" }

#base64 = {version = "0.13"}
#chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
