[package]
name = "path_explorer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true
time_indexing.workspace = true

#base64 = {version = "0.13"}
#chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
