[package]
name = "threads_zome"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

time_indexing = { path = "../../../crates/time_indexing" }

path_explorer = { path = "../path_explorer" }


base64 = {version = "0.13"}
threads_integrity = { package = "threads_integrity_zome", path = "../threads_integrity" }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
