[package]
name = "threads_coordinator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = {version = "0.13"}
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
strum = "0.26"
strum_macros = "0.26"

serde.workspace = true
hdk.workspace = true

zome_utils.workspace = true
time_indexing.workspace = true
path_explorer_types.workspace = true

threads_integrity = { package = "threads_integrity", path = "../threads_integrity" }
authorship_zapi = { package = "authorship_zapi", path = "../authorship_zapi" }
